[gd_scene load_steps=2 format=3 uid="uid://eai4j8k7xpqr"]

[ext_resource type="Script" uid="uid://bxpoyyqchrsyd" path="res://scripts/ui/AdvancedHUD.gd" id="1_advanced_hud"]

[node name="AdvancedHUD" type="CanvasLayer"]
script = ExtResource("1_advanced_hud")

[node name="MainInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_top = 1.0
offset_right = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopPanel" type="HBoxContainer" parent="MainInterface"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="ResourcesContainer" type="HBoxContainer" parent="MainInterface/TopPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MoneyLabel" type="Label" parent="MainInterface/TopPanel/ResourcesContainer"]
layout_mode = 2
text = "Деньги: $100000"

[node name="ReputationLabel" type="Label" parent="MainInterface/TopPanel/ResourcesContainer"]
layout_mode = 2
text = "Репутация: 50/100"

[node name="StatusContainer" type="HBoxContainer" parent="MainInterface/TopPanel"]
layout_mode = 2
size_flags_horizontal = 3

[node name="StateLabel" type="Label" parent="MainInterface/TopPanel/StatusContainer"]
layout_mode = 2
text = "Состояние: Планирование"

[node name="WeatherLabel" type="Label" parent="MainInterface/TopPanel/StatusContainer"]
layout_mode = 2
text = "Погода: Ясно"

[node name="LeftPanel" type="VBoxContainer" parent="MainInterface"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_vertical = 2

[node name="ActionPanel" type="VBoxContainer" parent="MainInterface/LeftPanel"]
layout_mode = 2

[node name="SurveyButton" type="Button" parent="MainInterface/LeftPanel/ActionPanel"]
layout_mode = 2
text = "Геологическая разведка"

[node name="BuildButton" type="Button" parent="MainInterface/LeftPanel/ActionPanel"]
layout_mode = 2
text = "Построить плотину"

[node name="MaterialPanel" type="VBoxContainer" parent="MainInterface/LeftPanel"]
layout_mode = 2

[node name="MaterialLabel" type="Label" parent="MainInterface/LeftPanel/MaterialPanel"]
layout_mode = 2
text = "Материал:"

[node name="MaterialOption" type="OptionButton" parent="MainInterface/LeftPanel/MaterialPanel"]
layout_mode = 2

[node name="StrengthPanel" type="VBoxContainer" parent="MainInterface/LeftPanel"]
layout_mode = 2

[node name="CurrentStrengthLabel" type="Label" parent="MainInterface/LeftPanel/StrengthPanel"]
layout_mode = 2
text = "Текущая прочность: 0 ед."

[node name="PlannedStrengthLabel" type="Label" parent="MainInterface/LeftPanel/StrengthPanel"]
visible = false
layout_mode = 2
text = "Планируемая прочность: 0 ед."

[node name="RightPanel" type="VBoxContainer" parent="MainInterface"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -200.0
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 2

[node name="DamInfoPanel" type="VBoxContainer" parent="MainInterface/RightPanel"]
layout_mode = 2

[node name="DamInfoTitle" type="Label" parent="MainInterface/RightPanel/DamInfoPanel"]
layout_mode = 2
text = "Информация о плотинах:"

[node name="ScrollContainer" type="ScrollContainer" parent="MainInterface/RightPanel/DamInfoPanel"]
layout_mode = 2
size_flags_vertical = 3

[node name="DamList" type="VBoxContainer" parent="MainInterface/RightPanel/DamInfoPanel/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="TotalPowerLabel" type="Label" parent="MainInterface/RightPanel/DamInfoPanel"]
layout_mode = 2
text = "Общая мощность: 0 МВт"

[node name="InfoPanel" type="VBoxContainer" parent="MainInterface"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -50.0
grow_horizontal = 2
grow_vertical = 0

[node name="InfoContainer" type="HBoxContainer" parent="MainInterface/InfoPanel"]
layout_mode = 2

[node name="RiverFlowLabel" type="Label" parent="MainInterface/InfoPanel/InfoContainer"]
layout_mode = 2
text = "Поток реки: 100 м³/с"

[node name="EventDialog" type="AcceptDialog" parent="."]
title = "Событие"
initial_position = 2
size = Vector2i(400, 200)

[node name="VBox" type="VBoxContainer" parent="EventDialog"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="EventTitle" type="Label" parent="EventDialog/VBox"]
layout_mode = 2
text = "Заголовок события"

[node name="EventDescription" type="Label" parent="EventDialog/VBox"]
layout_mode = 2
size_flags_vertical = 3
text = "Описание события"

[node name="ChoicesContainer" type="VBoxContainer" parent="EventDialog/VBox"]
layout_mode = 2
